client/src/scss/app.scss
@import "material-icons";
@import "material.teal-red.min";
@import "dnd";
@import "markdown";

$adminOrange: #ffb100;

body, html {
	margin: 0;
	padding: 0;
	line-height: 1.45; //multiple of font size.
	font-family: 'Open Sans', sans-serif;
}

@mixin flexColumn {
	display: flex;
	flex-direction: column;
}

@mixin bigTitle {
    width: 820px;
    padding: 0.2em;
	text-align: center;
    //display: flex;
    //justify-content: center;
    position: relative;
    color: #000000;
    margin-bottom: 1.2em;
    font-size: 2em;
    font-weight: 400;
    line-height: 1.2em;

	&::after {
		content: '';
		position: absolute;
		bottom: -150px;

		// oddly, on chrome, this lay behind things yet intefered with DnD. this stops that:
		z-index: -1;
		pointer-events: none;

		right: 0px;
		width: 100%;
		box-sizing: border-box;
		border: 75px solid transparent;
		border-left-width: 100px;
		border-right-width: 100px;
	}
}

@mixin bigPinkTitle {
	@include bigTitle;
    background-color: #f6cfff;
	&::after { border-top-color: #d39ee0; }
}

@mixin bigBlueTitle {
	@include bigTitle;
    background-color: #d2cfff;
	&::after { border-top-color: #9c97da; }
}

@mixin entryUserTitle {

	font-weight: 600;
	display: flex;
	align-items: center;
	margin-bottom: 0.5em;
	font-size: 1.1em;

	.text.link {
		font-weight: inherit;
		color: #5c5eff;
		text-decoration: underline;
		cursor: pointer;
	}

	> i {
		margin-right: 0.3em;
	}

}

@mixin day {
	position: relative;
	flex-shrink: 0;

	width: 700px;
	margin-bottom: 5px;
	padding: 10px;
	padding: 0.5em 1em;

	background-color: white;
	border-bottom: 1px solid rgb(209, 209, 209);
	border-right: 1px solid rgb(248, 248, 248);
	border-top: 1px solid rgb(248, 248, 248);
	border-left: 8px solid #ef00ff;

	> .title {
		@include entryUserTitle;
		font-size: 2em;
		font-weight: 500;
		margin-bottom: 0em; // because markdown desc will have margin-top 0.5em
	}
}

@mixin entry {
	position: relative;
	flex-shrink: 0;

	width: 660px;
	margin-bottom: 5px;
	padding: 10px;
	padding: 0.5em 1em;

	background-color: white;
	border-bottom: 1px solid rgb(209, 209, 209);
	border-right: 1px solid rgb(248, 248, 248);
	border-top: 1px solid rgb(248, 248, 248);

	&.entry-talk {
		border-left: 8px solid #4bb1c1;
	}
	&.entry-project {
		border-left: 8px solid #63c519;
	}

	> .title {
		@include entryUserTitle;
		margin-bottom: 0em; // because markdown desc will have margin-top 0.5em
	}

	> .description {
		//avoid hitting duration:
		width: calc(100% - 35px);
	}

	> .user {
		font-style: italic;
		color: rgb(130, 130, 130);
		font-size:90%;

		//avoid hitting duration:
		width: calc(100% - 35px);
	}

	> .duration {

		position: absolute;
		bottom: 10px;
		right: 10px;

		display: flex;
		align-self: flex-end;

		border-radius: 15px;
		width: 32px;
		height: 32px;

		background-color: #e4e4e4;
		color: #323133;

		align-items: center;
		justify-content: center;
	}
}

//flex all the way down..
body > .content {

	position: absolute;
	width: 100%;
	height: 100%;
	overflow: hidden; //so dnd items don't cause scrollbars
	@include flexColumn;

	// this is the thing that's being dragged about in an overlay:
	.dragging-entry {
		pointer-events: none;
		> .entry {
			@include entry;
			transform: scale(0.7) translateX(-50%) translateY(-50%);
			box-shadow: 0px 11px 43px 3px rgba(0,0,0,0.35);
		}
	}

	.top {

		flex-shrink: 0;

		height: 48px;
		display: flex;
		align-items: center;
		justify-content: space-between;
		position: relative;
		color: white;
		background-color: #6d6fab;
		padding: 0px 1em;

		border-bottom: 2px solid purple;
		&.is-admin-mode {
			border-bottom: 6px solid $adminOrange;
		}

		&.padded {
			margin-bottom: 1.5em;
		}

		> .left {
			display: flex;
			align-items: center;
			> .logo {
				font-weight: bold;
				font-size: 20px;
				display: flex;
				align-items: center;

				.logo-image {
					height: 24px;
					width: auto;
					margin-left: 4px;
					margin-top: -4px;
				}

			}
		}

		> .right {
			display: flex;
			align-items: center;
			height: 100%;

			> *:not(:last-child) {
				margin-right: 1em;
			}

			> .admin-mode {
				cursor: pointer;
				align-self: stretch;
				width:110px; //rather than padding, so it wont change if font goes bold
				display: flex;
				align-items: center;
				justify-content: center;
				background-color: purple;
				transition: background-color 0.2s ease-in-out;

				&:hover {
					background-color: lighten(purple, 5%);
				}
				&.enabled {
					background-color: $adminOrange;
				}
			}

			> .login-button {
				color: rgb(255, 255, 255) !important;
			}

		}

		.loading-overlay {
			position: absolute;
			bottom: -2px;
			left: 0;
			right: 0;

			.mdl-progress {
				width: auto;
			}
		}

	}

	.main {

		@include flexColumn;

		.mdl-tabs__tab-bar {
			flex-shrink: 0;
		}

		.mdl-tab__panel.is-active {
			@include flexColumn;
			> div {
				@include flexColumn;
			}
		}

		@mixin topButtonArea {
			display: flex;
			align-items: center;
			justify-content: center;
			padding-top: 1.5em;
			padding-bottom: 1.5em;
			flex-shrink: 0;

			> *:not(:last-child) {
				margin-right: 10px;
			}
		}

		.entries-tab {

			@include flexColumn;
			//overflow-y: auto;

			> .add-entry-area {
				@include topButtonArea;
			}

			> .scrollable {

				overflow-y: auto;

				> .days {
					@include flexColumn;
					align-items: center;
					flex-shrink: 0;

					> .days-title {
						margin-top: 0.4em;
						@include bigBlueTitle;
					}

					.day {
						@include day;
					}
				}

				> .entries {
					@include flexColumn;
					align-items: center;
					flex-shrink: 0;
					overflow-y: auto;

					> .entries-title {
						@include bigPinkTitle;
					}

					// these are nested into dnd things, so looser with targeting:
					.entry {
						@include flexColumn;
						@include entry;
					}
				}

			}

		}

		.users-tab {

			@include flexColumn;

			> .add-user-area {
				@include topButtonArea;
			}

			> .users {

				@include flexColumn;
				align-items: center;
				overflow-y: auto;

				> .user {

					width: 500px;
					margin-bottom: 5px;
					padding: 10px;
					padding: 0.5em 1em;
					position: relative;
					flex-shrink: 0;

					&.user-admin {
						border-left: 8px solid $adminOrange;
					}
					&.user-normal {
						border-left: 8px solid #8c9ca5
					}

					border-bottom: 1px solid rgb(209, 209, 209);
					border-right: 1px solid rgb(248, 248, 248);
					border-top: 1px solid rgb(248, 248, 248);

					> .title {
						@include entryUserTitle;
					}

					> .type {
						font-style: italic;
						color: rgb(130, 130, 130);
						font-size:90%;
					}

					> .is-new {
						position: absolute;
						bottom: 5px;
						right: 5px;
						height: 32px;
						width: 32px;
						font-size:0.75em;
						background-color: #ffd18c;
						border-radius: 100px;
						display: flex;
						align-items: center;
						justify-content: center;
						color: #5a3c00;
						font-weight: bold;
						border: 1px solid #ffbc00;
					}
				}
			}

		}

	}

	> .modals {

		@mixin modal-bottom-row {
			display: flex;
			align-items: center;
			padding-top: 10px;

			> .space-filler {
				flex-grow: 1;
			}
			> .error {
				flex-grow: 1;
				margin-left: 1em;
				display: flex;
				align-items: center;
				justify-content: center;
				background-color: #ff8989;
				align-self: stretch;
				border-radius: 2px;
				color: black;
				border-left: 3px solid red;
			}
		}

		@mixin input-table {

			//space between rows:
			border-collapse: separate;
			border-spacing: 10px 15px;
			width: 100%;

			.input-row {
				> .input-name {
					padding-right: 1em;
					vertical-align: middle;
					> .subtitle {
						font-size: 0.7em;
					}
				}
				> .input-widget {
					.type-inputs {
						> *:not(:last-child) {
							margin-right: 1em;
						}
					}
					.mdl-textfield {
						padding-top: 0px;
						padding-bottom: 0px;
						width: 100%;
						.mdl-textfield__input {
							padding-top: 0px;
						}
						.mdl-textfield__label {
							top: 0px;
							&::after { bottom: 0px; }
						}
					}
				}
			}

		}

		@mixin max-width-inputs {
			.input-row > .input-widget {
				width: 100%;
			}
		}

		.modal-background {
			position: absolute;
			top: 0;
			bottom: 0;
			left: 0;
			right: 0;
			z-index: 0;
			background-color: rgba(0,0,0,0.4);

			display: flex;
			align-items: center;
			justify-content: center;

			> .modal-inner {

				z-index: 0;
				background-color: white;
				border-radius: 3px;
				position: relative;
				box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.84);

				> .title {

					height: 33px; //same height whether X shown or not
					padding: 0.5em 1em;
					border-bottom: 1px solid rgba(0,0,0,0.3);
					font-weight: bold;

					display: flex;
					justify-content: space-between;
					align-items: center;
					position: relative;

					> .closer {
						height: 1em;
						width: 1em;
						background-color: red;
					}

					> .loading-overlay {
						position: absolute;
						bottom: -2px;
						width: 100%;
						left: 0;
						.mdl-progress {
							width: auto;
						}
					}

				}

				> .content {
					padding: 0.5em 1em 1em 1em;
					position: relative;

					.choice-modal {
						> .content {
							display: flex;
							align-items: center;
							> .icon {
								display: flex;
								padding-right: 15px;
							}
							> .message {
								width: 300px;
							}
						}
						> .buttons {
							display: flex;
							justify-content: space-between;
							align-items: center;
							padding-top: 15px;
							> .perform-button {
								background-color: #e40000;
								&:hover {
									background-color: rgb(255, 0, 0);
								}
							}
						}
					}

					.login-modal {
						.inputs {
							display: flex;
							flex-direction: column;
						}
						.bottom-row {
							@include modal-bottom-row;
						}
					}

					.set-password-modal {

						width: 350px; // make wider to fit error message
						> .needs-setting-text {
							margin: 10px 0px 10px 0px;
						}
						> .inputs {
							display: flex;
							flex-direction: column;
							> .mdl-textfield {
								width: 100%;
							}
						}
						> .bottom-row {
							@include modal-bottom-row;
						}
					}

					.user-modal {

						width: 500px;
						> .inputs {
							@include input-table;

							.set-password-button {
								background-color: rgb(0, 95, 150);
								&:hover {
									background-color: rgb(0, 53, 150);
								}
							}

						}
						> .bottom-row {
							@include modal-bottom-row;
						}

					}

					.entry-modal {

						width: 650px;
						> .inputs {

							@include input-table;
							@include max-width-inputs;

							.input-row {
								> .input-name .input-name-description {
									vertical-align: top;
								}
								> .input-widget {
									.duration-input {
										display: flex;
										align-items: center;
									}
									textarea {
										max-height: 400px;
									}
								}
							}

						}

						> .bottom-row {
							@include modal-bottom-row;
						}

					}

					.day-modal {

						width: 650px;
						> .inputs {
							@include input-table;
							@include max-width-inputs;

							.input-row > .input-widget textarea {
								max-height: 400px;
							}
						}
						> .bottom-row {
							@include modal-bottom-row;
						}

					}

				}

			}

		}

	}

}

